README and patchlevel for krb5-1.8.2
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-8@24127 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -324,6 +324,7 @@ Past and present Sponsors of the MIT Kerberos Consortium:
     Microsoft
     The National Aeronautics and Space Administration
         of the United States of America (NASA)
+    Network Appliance (NetApp)
     Nippon Telephone and Telegraph (NTT)
     Oracle
     Pennsylvania State University
@@ -332,6 +333,7 @@ Past and present Sponsors of the MIT Kerberos Consortium:
     TeamF1, Inc.
     The University of Alaska
     The University of Michigan
+    The University of Pennsylvania
 
 Past and present members of the Kerberos Team at MIT:
 
