--- a/doc/krb5conf.texinfo
+++ b/doc/krb5conf.texinfo
@@ -40,6 +40,20 @@ foo = baz
 
 then the second value of foo (baz) would never be read.
 
+The @code{krb5.conf} file can include other files using either of the
+following directives at the beginning of a line:
+
+@smallexample
+include @var{FILENAME}
+includedir @var{DIRNAME}
+@end smallexample
+
+@var{FILENAME} or @var{DIRNAME} should be an absolute path.  The named
+file or directory must exist and be readable.  Including a directory
+includes all files within the directory whose names consist solely of
+alphanumeric characters, dashes, or underscores.  Included configuration
+fragments should begin with a section header.
+
 The @code{krb5.conf} file may contain any or all of the following 
 sections:
 
