--- a/doc/krb5conf.texinfo
+++ b/doc/krb5conf.texinfo
@@ -51,8 +51,9 @@ includedir @var{DIRNAME}
 @var{FILENAME} or @var{DIRNAME} should be an absolute path.  The named
 file or directory must exist and be readable.  Including a directory
 includes all files within the directory whose names consist solely of
-alphanumeric characters, dashes, or underscores.  Included configuration
-fragments should begin with a section header.
+alphanumeric characters, dashes, or underscores.  Included profile files
+are syntactically independent of their parents, so each included file
+must begin with a section header.
 
 The @code{krb5.conf} file may contain any or all of the following 
 sections:
