Add documentation of the plugins section to krb5.conf.M and krb5-admin.texinfo, along with documentation of the pwqual interface and built-in modules.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins2@24280 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/krb5conf.texinfo
+++ b/doc/krb5conf.texinfo
@@ -89,6 +89,10 @@ client to determine the intermediate realms which may be used in
 cross-realm authentication.  It is also used by the end-service when
 checking the transited field for trusted intermediate realms.
 
+@itemx plugins
+Contains tags to register dynamic plugin modules and to turn modules on
+and off.
+
 @ignore
 this doesn't seem to be used
 @itemx kdc
