--- a/doc/copyright.texinfo
+++ b/doc/copyright.texinfo
@@ -1,13 +1,17 @@
+@iftex
+@begingroup
+@smallfonts @rm
+@end iftex
 Copyright @copyright{} 1985-2010 by the Massachusetts Institute of Technology.
 
 All rights reserved.
 
-@smalldisplay
+@quotation
 Export of software employing encryption from the United States of
 America may require a specific license from the United States
 Government.  It is the responsibility of any person or organization
 contemplating export to obtain such a license before exporting.
-@end smalldisplay
+@end quotation
 
 WITHIN THAT CONSTRAINT, permission to use, copy, modify, and distribute
 this software and its documentation for any purpose and without fee is
@@ -44,7 +48,7 @@ OpenVision Kerberos Administration system located in
 @code{kadmin/server}, @code{lib/kadm5}, and portions of
 @code{lib/rpc}:
 
-@smalldisplay
+@quotation
 Copyright, OpenVision Technologies, Inc., 1993-1996, All Rights Reserved
 
 WARNING:  Retrieving the OpenVision Kerberos Administration system source
@@ -75,22 +79,22 @@ system to MIT for inclusion in the standard Kerberos 5 distribution.
 This donation underscores our commitment to continuing Kerberos
 technology development and our gratitude for the valuable work which has
 been performed by MIT and the Kerberos community.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Portions contributed by Matt Crawford @code{<crawdad@@fnal.gov>} were work
 performed at Fermi National Accelerator Laboratory, which is operated
 by Universities Research Association, Inc., under contract
 DE-AC02-76CHO3000 with the U.S. Department of Energy.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions of @code{src/lib/crypto} have the following copyright:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1998 by the FundsXpress, INC.
 
 All rights reserved.
@@ -116,14 +120,14 @@ or implied warranty.
 THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The implementation of the Yarrow pseudo-random number generator
 in @code{src/lib/crypto/krb/prng/yarrow} has the following copyright:
 
-@smalldisplay
+@quotation
 Copyright 2000 by Zero-Knowledge Systems, Inc.
 
 Permission to use, copy, modify, distribute, and sell this software
@@ -144,14 +148,14 @@ ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTUOUS ACTION, ARISING OUT
 OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The implementation of the AES encryption algorithm in
 @code{src/lib/crypto/builtin/aes} has the following copyright:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2001, Dr Brian Gladman @code{<brg@@gladman.uk.net>},
 Worcester, UK.@*
 All rights reserved.
@@ -161,7 +165,7 @@ LICENSE TERMS
 The free distribution and use of this software in both source and binary
 form is allowed (with or without changes) provided that:
 
-@enumerate
+@enumerate 1
 @item
 distributions of this source code include the above copyright
 notice, this list of conditions and the following disclaimer;
@@ -179,7 +183,7 @@ DISCLAIMER
 This software is provided 'as is' with no explcit or implied warranties
 in respect of any properties, including, but not limited to, correctness
 and fitness for purpose.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
@@ -187,7 +191,7 @@ Portions contributed by Red Hat, including the pre-authentication
 plug-in framework and the NSS crypto implementation, contain the
 following copyright:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2006 Red Hat, Inc.@*
 Portions copyright @copyright{} 2006 Massachusetts Institute of Technology@*
 All Rights Reserved.@*
@@ -221,7 +225,7 @@ PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
@@ -285,7 +289,7 @@ slave/kproplog.c
 
 are subject to the following license:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2004 Sun Microsystems, Inc.
 
 Permission is hereby granted, free of charge, to any person obtaining a
@@ -306,7 +310,7 @@ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
 CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
 TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
@@ -314,7 +318,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 University of California at Berkeley, which includes this copyright
 notice:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1983 Regents of the University of California.@*
 All rights reserved.
 
@@ -322,7 +326,7 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
 met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -347,15 +351,15 @@ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions contributed by Novell, Inc., including the LDAP database
 backend, are subject to the following license:
 
-@smalldisplay
-Copyright @copyright{} 2004-2005, Novell, Inc.
+@quotation
+Copyright @copyright{} 2004-2005, Novell, Inc.@*
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -385,7 +389,7 @@ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
@@ -395,7 +399,7 @@ Center for Information Technology Integration,
 including the PKINIT implementation, are subject
 to the following license:
 
-@smalldisplay
+@quotation
 COPYRIGHT @copyright{} 2006-2007@*
 THE REGENTS OF THE UNIVERSITY OF MICHIGAN@*
 ALL RIGHTS RESERVED
@@ -423,15 +427,15 @@ CONSEQUENTIAL DAMAGES, WITH RESPECT TO ANY CLAIM ARISING
 OUT OF OR IN CONNECTION WITH THE USE OF THE SOFTWARE, EVEN
 IF IT HAS BEEN OR IS HEREAFTER ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGES.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The pkcs11.h file included in the PKINIT code has the
 following license:
 
-@smalldisplay
-Copyright 2006 g10 Code GmbH
+@quotation
+Copyright 2006 g10 Code GmbH@*
 Copyright 2006 Andreas Jellinghaus
 
 This file is free software; as a special exception the author gives
@@ -442,13 +446,13 @@ This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even
 the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
 PURPOSE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions contributed by Apple Inc. are subject to the following license:
 
-@smalldisplay
+@quotation
 Copyright 2004-2008 Apple Inc.  All Rights Reserved.
 
 @quotation
@@ -466,13 +470,13 @@ this permission notice appear in supporting documentation, and that
 the name of Apple Inc. not be used in advertising or publicity pertaining
 to distribution of the software without specific, written prior
 permission.  Apple Inc. makes no representations about the suitability of
-this software for any purpose.  It is provided "as is" without express
+this software for any purpose.  It is provided ``as is'' without express
 or implied warranty.
 
 THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
@@ -480,15 +484,15 @@ The implementations of UTF-8 string handling in src/util/support and
 src/lib/krb5/unicode are subject to the following copyright and
 permission notice:
 
-@smalldisplay
+@quotation
 The OpenLDAP Public License@*
 Version 2.8, 17 August 2003
 
 Redistribution and use of this software and associated documentation
-("Software"), with or without modification, are permitted provided
+(``Software''), with or without modification, are permitted provided
 that the following conditions are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions in source form must retain copyright statements
 and notices,
@@ -531,22 +535,28 @@ OpenLDAP is a registered trademark of the OpenLDAP Foundation.
 Copyright 1999-2003 The OpenLDAP Foundation, Redwood City,
 California, USA.  All Rights Reserved.  Permission to copy and
 distribute verbatim copies of this document is granted.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Marked test programs in src/lib/krb5/krb have the following copyright:
 
-@smalldisplay
-Copyright @copyright{} 2006 Kungliga Tekniska Högskolan
-(Royal Institute of Technology, Stockholm, Sweden).
+@iftex
+@set odiaeresis @"o
+@end iftex
+@ifinfo
+@set odiaeresis ö
+@end ifinfo
+@quotation
+Copyright @copyright{} 2006 Kungliga Tekniska H@value{odiaeresis}gskolan@*
+(Royal Institute of Technology, Stockholm, Sweden).@*
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -571,14 +581,14 @@ BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions of the RPC implementation in src/lib/rpc and src/include/gssrpc
 have the following copyright and permission notice:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2010, Oracle America, Inc.
 
 All rights reserved.
@@ -586,7 +596,7 @@ All rights reserved.
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -596,13 +606,13 @@ notice, this list of conditions and the following disclaimer in
 the documentation and/or other materials provided with the
 distribution.
 @item
-Neither the name of the "Oracle America, Inc." nor the names of
+Neither the name of the ``Oracle America, Inc.'' nor the names of
 its contributors may be used to endorse or promote products
 derived from this software without specific prior written permission.
 @end enumerate
 
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
-IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS ``AS
+IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
 TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
 PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
@@ -612,11 +622,11 @@ PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2006,2007,2009
 NTT (Nippon Telegraph and Telephone Corporation).  All rights reserved.
 
@@ -624,7 +634,7 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer as
@@ -645,11 +655,11 @@ DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Copyright 2000 by Carnegie Mellon University
 
 All Rights Reserved
@@ -670,11 +680,11 @@ ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT
 OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2002 Naval Research Laboratory (NRL/CCS)
 
 Permission to use, copy, modify and distribute this software and its
@@ -682,17 +692,17 @@ documentation is hereby granted, provided that both the copyright
 notice and this permission notice appear in all copies of the software,
 derivative works or modified versions, and any portions thereof.
 
-NRL ALLOWS FREE USE OF THIS SOFTWARE IN ITS "AS IS" CONDITION AND
+NRL ALLOWS FREE USE OF THIS SOFTWARE IN ITS ``AS IS'' CONDITION AND
 DISCLAIMS ANY LIABILITY OF ANY KIND FOR ANY DAMAGES WHATSOEVER
 RESULTING FROM THE USE OF THIS SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions extracted from Internet RFCs have the following copyright
 notice:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} The Internet Society (2006).
 
 This document is subject to the rights, licenses and restrictions
@@ -700,17 +710,17 @@ contained in BCP 78, and except as set forth therein, the authors
 retain all their rights.
 
 This document and the information contained herein are provided on an
-"AS IS" basis and THE CONTRIBUTOR, THE ORGANIZATION HE/SHE REPRESENTS
+``AS IS'' basis and THE CONTRIBUTOR, THE ORGANIZATION HE/SHE REPRESENTS
 OR IS SPONSORED BY (IF ANY), THE INTERNET SOCIETY AND THE INTERNET
 ENGINEERING TASK FORCE DISCLAIM ALL WARRANTIES, EXPRESS OR IMPLIED,
 INCLUDING BUT NOT LIMITED TO ANY WARRANTY THAT THE USE OF THE
 INFORMATION HEREIN WILL NOT INFRINGE ANY RIGHTS OR ANY IMPLIED
 WARRANTIES OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1991, 1992, 1994 by Cygnus Support.
 
 Permission to use, copy, modify, and
@@ -719,18 +729,18 @@ without fee is hereby granted, provided that the above copyright
 notice appear in all copies and that both that copyright notice and
 this permission notice appear in supporting documentation.
 Cygnus Support makes no representations about the suitability of
-this software for any purpose.  It is provided "as is" without express
+this software for any purpose.  It is provided ``as is'' without express
 or implied warranty.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2006 Secure Endpoints Inc.
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
-files (the "Software"), to deal in the Software without
+files (the ``Software''), to deal in the Software without
 restriction, including without limitation the rights to use, copy,
 modify, merge, publish, distribute, sublicense, and/or sell copies
 of the Software, and to permit persons to whom the Software is
@@ -739,7 +749,7 @@ furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be
 included in all copies or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+THE SOFTWARE IS PROVIDED ``AS IS'', WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
 MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
@@ -747,22 +757,22 @@ BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
 ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Portions of the implementation of the Fortuna-like PRNG are subject to
 the following notice:
 
-@smalldisplay
-Copyright @copyright{} 2005 Marko Kreen
+@quotation
+Copyright @copyright{} 2005 Marko Kreen@*
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -783,9 +793,9 @@ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1994 by the University of Southern California
 
 @quotation
@@ -801,7 +811,7 @@ hereby granted, provided that any documentation or other materials
 related to such distribution or use acknowledge that the software
 was developed by the University of Southern California.
 
-DISCLAIMER OF WARRANTY.  THIS SOFTWARE IS PROVIDED "AS IS".  The
+DISCLAIMER OF WARRANTY.  THIS SOFTWARE IS PROVIDED ``AS IS''.  The
 University of Southern California MAKES NO REPRESENTATIONS OR
 WARRANTIES, EXPRESS OR IMPLIED.  By way of example, but not
 limitation, the University of Southern California MAKES NO
@@ -810,12 +820,12 @@ PARTICULAR PURPOSE. The University of Southern
 California shall not be held liable for any liability nor for any
 direct, indirect, or consequential damages with respect to any
 claim by the user or distributor of the ksu software.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-@smalldisplay
-Copyright @copyright{} 1995
+@quotation
+Copyright @copyright{} 1995@*
 The President and Fellows of Harvard University
 
 This code is derived from software contributed to Harvard by
@@ -825,7 +835,7 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -857,13 +867,13 @@ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
-@smalldisplay
-Copyright @copyright{} 2008 by the Massachusetts Institute of Technology.
-Copyright 1995 by Richard P. Basch.  All Rights Reserved.
-Copyright 1995 by Lehman Brothers, Inc.  All Rights Reserved.
+@quotation
+Copyright @copyright{} 2008 by the Massachusetts Institute of Technology.@*
+Copyright 1995 by Richard P. Basch.  All Rights Reserved.@*
+Copyright 1995 by Lehman Brothers, Inc.  All Rights Reserved.@*
 
 @quotation
 Export of this software from the United States of America may
@@ -881,16 +891,16 @@ the name of Richard P. Basch, Lehman Brothers and M.I.T. not be used
 in advertising or publicity pertaining to distribution of the software
 without specific, written prior permission.  Richard P. Basch,
 Lehman Brothers and M.I.T. make no representations about the suitability
-of this software for any purpose.  It is provided "as is" without
+of this software for any purpose.  It is provided ``as is'' without
 express or implied warranty.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to @code{src/lib/krb5/krb/strptime.c}:
 
-@smalldisplay
-Copyright @copyright{} 1997, 1998 The NetBSD Foundation, Inc.
+@quotation
+Copyright @copyright{} 1997, 1998 The NetBSD Foundation, Inc.@*
 All rights reserved.
 
 This code was contributed to The NetBSD Foundation by Klaus Klein.
@@ -899,7 +909,7 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -931,19 +941,19 @@ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to Unicode library files in
 @code{src/lib/krb5/unicode}:
 
-@smalldisplay
-Copyright 1997, 1998, 1999 Computing Research Labs,
+@quotation
+Copyright 1997, 1998, 1999 Computing Research Labs,@*
 New Mexico State University
 
 Permission is hereby granted, free of charge, to any person obtaining a
-copy of this software and associated documentation files (the "Software"),
+copy of this software and associated documentation files (the ``Software''),
 to deal in the Software without restriction, including without limitation
 the rights to use, copy, modify, merge, publish, distribute, sublicense,
 and/or sell copies of the Software, and to permit persons to whom the
@@ -952,47 +962,47 @@ Software is furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+THE SOFTWARE IS PROVIDED ``AS IS'', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
 THE COMPUTING RESEARCH LAB OR NEW MEXICO STATE UNIVERSITY BE LIABLE FOR ANY
 CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
 OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
 THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to @code{src/util/support/strlcpy.c}:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1998 Todd C. Miller <Todd.Miller@@courtesan.com>
 
 Permission to use, copy, modify, and distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
 copyright notice and this permission notice appear in all copies.
 
-THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+THE SOFTWARE IS PROVIDED ``AS IS'' AND THE AUTHOR DISCLAIMS ALL WARRANTIES
 WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
 MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
 ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to @code{src/util/profile/argv_parse.c} and
 @code{src/util/profile/argv_parse.h}:
 
-@smalldisplay
+@quotation
 Copyright 1999 by Theodore Ts'o.
 
 Permission to use, copy, modify, and distribute this software for
 any purpose with or without fee is hereby granted, provided that
 the above copyright notice and this permission notice appear in all
-copies.  THE SOFTWARE IS PROVIDED "AS IS" AND THEODORE TS'O (THE
+copies.  THE SOFTWARE IS PROVIDED ``AS IS'' AND THEODORE TS'O (THE
 AUTHOR) DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
 INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS.
 IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
@@ -1002,26 +1012,26 @@ OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR
 IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.  (Isn't
 it sick that the U.S. culture of lawsuit-happy lawyers requires
 this kind of disclaimer?)
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to SWIG-generated code in
 @code{src/util/profile/profile_tcl.c}:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1999-2000, The University of Chicago
 
 This file may be freely redistributed without license or fee provided
 this copyright message remains intact.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 The following notice applies to portiions of @code{src/lib/rpc} and
 @code{src/include/gssrpc}:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 2000 The Regents of the University of Michigan.
 All rights reserved.
 
@@ -1032,7 +1042,7 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 
-@enumerate
+@enumerate 1
 @item
 Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
@@ -1057,85 +1067,85 @@ BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Implementations of the MD4 algorithm are subject to the following
 notice:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1990, RSA Data Security, Inc. All rights reserved.
 
 License to copy and use this software is granted provided that
-it is identified as the "RSA Data Security, Inc. MD4 Message
-Digest Algorithm" in all material mentioning or referencing this
+it is identified as the ``RSA Data Security, Inc. MD4 Message
+Digest Algorithm'' in all material mentioning or referencing this
 software or this function.
 
 License is also granted to make and use derivative works
-provided that such works are identified as "derived from the RSA
-Data Security, Inc. MD4 Message Digest Algorithm" in all
+provided that such works are identified as ``derived from the RSA
+Data Security, Inc. MD4 Message Digest Algorithm'' in all
 material mentioning or referencing the derived work.
 
 RSA Data Security, Inc. makes no representations concerning
 either the merchantability of this software or the suitability
-of this software for any particular purpose.  It is provided "as
-is" without express or implied warranty of any kind.
+of this software for any particular purpose.  It is provided ``as
+is'' without express or implied warranty of any kind.
 
 These notices must be retained in any copies of any part of this
 documentation and/or software.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
 Implementations of the MD5 algorithm are subject to the following
 notice:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1990, RSA Data Security, Inc. All rights reserved.
 
 License to copy and use this software is granted provided that
-it is identified as the "RSA Data Security, Inc. MD5 Message-
-Digest Algorithm" in all material mentioning or referencing this
+it is identified as the ``RSA Data Security, Inc. MD5 Message-
+Digest Algorithm'' in all material mentioning or referencing this
 software or this function.
 
 License is also granted to make and use derivative works
-provided that such works are identified as "derived from the RSA
-Data Security, Inc. MD5 Message-Digest Algorithm" in all
+provided that such works are identified as ``derived from the RSA
+Data Security, Inc. MD5 Message-Digest Algorithm'' in all
 material mentioning or referencing the derived work.
 
 RSA Data Security, Inc. makes no representations concerning
 either the merchantability of this software or the suitability
-of this software for any particular purpose.  It is provided "as
-is" without express or implied warranty of any kind.
+of this software for any particular purpose.  It is provided ``as
+is'' without express or implied warranty of any kind.
 
 These notices must be retained in any copies of any part of this
 documentation and/or software.
-@end smalldisplay
+@end quotation
 
 @cdivider
 
-The following notice applies to @code{src/lib/crypto/krb/crc32/crc32.c}:
+The following notice applies to @code{src/lib/crypto/crypto_tests/t_mddriver.c}:
 
-@smalldisplay
+@quotation
 Copyright @copyright{} 1990-2, RSA Data Security, Inc. Created 1990. All
 rights reserved.
 
 RSA Data Security, Inc. makes no representations concerning either
 the merchantability of this software or the suitability of this
-software for any particular purpose. It is provided "as is"
+software for any particular purpose. It is provided ``as is''
 without express or implied warranty of any kind.
 
 These notices must be retained in any copies of any part of this
 documentation and/or software.
-@end smalldisplay
+@end quotation
 
 @cdivider
 Portions of @code{src/lib/krb5} are subject to the following notice:
 
-@smalldisplay
-Copyright @copyright{} 1994 CyberSAFE Corporation.
-Copyright 1990,1991,2007,2008 by the Massachusetts Institute of Technology.
+@quotation
+Copyright @copyright{} 1994 CyberSAFE Corporation.@*
+Copyright 1990,1991,2007,2008 by the Massachusetts Institute of Technology.@*
 All Rights Reserved.
 
 @quotation
@@ -1157,9 +1167,9 @@ your software as modified software and not distribute it in such a
 fashion that it might be confused with the original M.I.T. software.
 Neither M.I.T., the Open Computing Security Group, nor
 CyberSAFE Corporation make any representations about the suitability of
-this software for any purpose.  It is provided "as is" without express
+this software for any purpose.  It is provided ``as is'' without express
 or implied warranty.
-@end smalldisplay
+@end quotation
 @ifclear noticefile
 
 @cdivider
@@ -1185,4 +1195,5 @@ into another language, under the above conditions for modified versions.
 @end ifclear
 @iftex
 @pagealignmacro
+@endgroup
 @end iftex
